// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <View
      className="IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS2"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile n medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <View
      className="IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS2"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile n small 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "padding": "10px",
      "paddingHorizontal": 12,
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <View
      className="IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS2"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile n wide 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <View
      className="IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS2"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile n with default star 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginRight": "5px",
      "padding": "10px",
      "paddingHorizontal": 12,
    }
  }
  url="/article/123"
>
  <View
    className="IS3"
  >
    <View
      className="IS1"
    >
      <ArticleLabel
        color="#CCC"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      className="IS2"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      color="#CCC"
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;
